// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> renders 1`] = `
<p
  className="undefined undefined"
/>
`;

exports[`<Text> when {children} 1`] = `
<p
  className="undefined undefined"
>
  Lorem ipsum
</p>
`;

exports[`<Text> when {color} 1`] = `
<p
  className="undefined undefined undefined"
/>
`;

exports[`<Text> when {headline} 1`] = `
<p
  className="undefined undefined"
/>
`;

exports[`<Text> when {inherit} 1`] = `
<p
  className="undefined undefined styles"
>
  Lorem ipsum
</p>
`;

exports[`<Text> when {subtitle} 1`] = `
<p
  className="undefined undefined"
/>
`;
